# Galaxy-MNN

./: .gitignore  CMakeLists.txt
CodeSpace/mlp_demo/: mlp_minist_cpu.mnn  mlp_minist_cpu.pth
CodeSpace/mnn-llm-master/: CMakeLists.txt
CodeSpace/mnn-llm-master/demo/: cli_demo.cpp
CodeSpace/mnn-llm-master/resource/: prompt_1.txt
CodeSpace/mnn-llm-master/script/: gpu_busy_percentage.sh
CodeSpace/mnn-llm-master/src/: llm.cpp
mlp_demo/: convert2onnx.py  mlp.py  mlp_minist_cpu.onnx  mlp_mnist.pth
test_minist/: CMakeLists.txt
test_mnist2/: CMakeLists.txt  inference.cpp
