cmake_minimum_required(VERSION 3.10)
project(mnist)

set(CMAKE_CXX_STANDARD 11)

# find_package(OpenCV REQUIRED)
set(MNN_DIR /CodeSpace/nfs/MNN_new/Galaxy-MNN)
include_directories(${MNN_DIR}/include)
include_directories(${MNN_DIR}/include/MNN)
include_directories(${MNN_DIR}/tools)
include_directories(${MNN_DIR}/tools/cpp)
include_directories(${MNN_DIR}/source)
include_directories(${MNN_DIR}/source/backend)
include_directories(${MNN_DIR}/source/core)
include_directories(${MNN_DIR}/schema/current)
include_directories(${MNN_DIR}/3rd_party/flatbuffers/include)
LINK_DIRECTORIES(${MNN_DIR}/build)
add_executable(mnist.out ${MNN_DIR}/test_mnist2/inference.cpp)
# add_executable(mnist_inference miniset_inference.cpp)
# target_link_libraries(mnist -lMNN ${OpenCV_LIBS})
target_link_libraries(mnist.out ${MNN_DIR}/build/libMNN.so)